--- a/sparePartsStore/View/ViewAdministrator/ViewWorkingWithData/PageListUnit.xaml
+++ b/sparePartsStore/View/ViewAdministrator/ViewWorkingWithData/PageListUnit.xaml
@@ -52,9 +52,16 @@
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
 
-            <Button Grid.Row="0" Grid.Column="0" Content="Добавить" MinWidth="100" Height="35" Background="Gray" BorderBrush="Black" Click="Btn_AddUnit"/>
-            <Button Grid.Row="0" Grid.Column="1" Content="Редктировать" MinWidth="100" Height="35" Background="Gray" BorderBrush="Black" Margin="10,0,0,0" Click="Btn_EditUnit" IsEnabled="{Binding IsWorkButtonEnable}"/>
-            <Button Grid.Row="0" Grid.Column="2" Content="Удалить" MinWidth="100" Height="35" Background="Gray" BorderBrush="Black" Margin="10,0,0,0" Click="Btn_OpenPopup" IsEnabled="{Binding IsWorkButtonEnable}"/>
+            <Button Grid.Row="0" Grid.Column="0" Content="Добавить" MinWidth="100" 
+                    Height="35" Background="Gray" BorderBrush="Black" Click="Btn_AddUnit"/>
+            
+            <Button Grid.Row="0" Grid.Column="1" Content="Редктировать" MinWidth="100" 
+                    Height="35" Background="Gray" BorderBrush="Black" Margin="10,0,0,0" 
+                    Click="Btn_EditUnit" IsEnabled="{Binding IsWorkButtonEnable}"/>
+            
+            <Button Grid.Row="0" Grid.Column="2" Content="Удалить" MinWidth="100" Height="35" 
+                    Background="Gray" BorderBrush="Black" Margin="10,0,0,0" Click="Btn_OpenPopup" 
+                    IsEnabled="{Binding IsWorkButtonEnable}"/>
 
             <TextBox Grid.Row="1" Grid.ColumnSpan="3" x:Name="SearchParts" Height="50" Margin="0,20,0,0"
                  VerticalAlignment="Center" 
