--- a/sparePartsStore/View/ViewAdministrator/ViewMainPages/PageMainHead.xaml
+++ b/sparePartsStore/View/ViewAdministrator/ViewMainPages/PageMainHead.xaml
@@ -116,7 +116,7 @@
                 <Button Content="Агрегат" Grid.Column="3" Style="{StaticResource BtnMenuHead}" Click="Btn_Unit" Command="{Binding Btn_unit, Source={StaticResource MainHeadViewModel}}"/>
                 <Button Content="Узел" Grid.Column="4" Style="{StaticResource BtnMenuHead}" Click="Btn_Knot" Command="{Binding Btn_Knot, Source={StaticResource MainHeadViewModel}}"/>
                 <Button Content="Запчасть" Grid.Column="5" Style="{StaticResource BtnMenuHead}" Click="Btn_Details"/>
-                <Button Content="Страна" Grid.Column="6" Style="{StaticResource BtnMenuHead}" Click="Btn_Country"/>
+                <Button Content="Страна" Grid.Column="6" Style="{StaticResource BtnMenuHead}" Click="Btn_Country" Command="{Binding Btn_Country, Source={StaticResource MainHeadViewModel}}"/>
                 <Button Content="Производитель" Grid.Column="7" Style="{StaticResource BtnMenuHead}" Click="Btn_Manufacture"/>
             </Grid>
 
