--- a/sparePartsStore/View/ViewAdministrator/ViewWorking/PageWorkKnot.xaml
+++ b/sparePartsStore/View/ViewAdministrator/ViewWorking/PageWorkKnot.xaml
@@ -52,7 +52,10 @@
 
             <!-- Верхняя часть экрана -->
             <Grid HorizontalAlignment="Left" VerticalAlignment="Top">
-                <Button Content="Домой" Margin="50, 4, 0, 0" Padding="-20, -3, 0, 0" Width="100" Command="{Binding ClosePageAddOrDeleteKnot}" Click="ClosePageAddOrDeleteKnot"  Background="Gray" BorderBrush="Black"/>
+                <Button Content="Домой" Margin="50, 4, 0, 0" Padding="-20, -3, 0, 0" 
+                        Width="100" Command="{Binding ClosePageAddOrDeleteKnot}" 
+                        Click="ClosePageAddOrDeleteKnot"  Background="Gray" 
+                        BorderBrush="Black"/>
                 <materialDesign:PackIcon Kind="Home" Margin="120, 10, 0, 0" Width="20" Height="20"/>
             </Grid>
 
@@ -90,8 +93,12 @@
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
 
-            <Button Grid.Row="0" Grid.Column="0" Content="Отмена" Width="150" Height="35" Background="Gray" BorderBrush="Black" Click="ClosePageAddOrDeleteKnot"/>
-            <Button Grid.Row="0" Grid.Column="1" Content="Добавить" x:Name="RenameButtonBrand" Width="150" Height="35" Background="Gray" BorderBrush="Black" Margin="20,0,0,0" Click="SaveData"/>
+            <Button Grid.Row="0" Grid.Column="0" Content="Отмена" Width="150" Height="35" 
+                    Background="Gray" BorderBrush="Black" Click="ClosePageAddOrDeleteKnot"/>
+            
+            <Button Grid.Row="0" Grid.Column="1" Content="Добавить" x:Name="RenameButtonBrand" 
+                    Width="150" Height="35" Background="Gray" BorderBrush="Black" 
+                    Margin="20,0,0,0" Click="SaveData"/>
 
         </Grid>
 
