--- a/sparePartsStore/View/ViewAdministrator/ViewWorking/PageWorkDetail.xaml
+++ b/sparePartsStore/View/ViewAdministrator/ViewWorking/PageWorkDetail.xaml
@@ -10,13 +10,30 @@
       Title="" MinHeight="700" Height="Auto" MinWidth="1200" Width="Auto">
 
     <Page.Resources>
-        <local1:ListCarBrandViewModel x:Key="ListCarBrandViewModel"/>
+        <!--<local1:ListAutopartViewModel x:Key="ListAutopartViewModel"/>-->
+
+        <!--анимация при некорректом вводе-->
+        <Storyboard x:Key="FocusAnimation">
+            <ColorAnimation Storyboard.TargetProperty="Background.(SolidColorBrush.Color)"
+            From="#de6d6d" To="Transparent" Duration="0:0:3" AutoReverse="False"/>
+        </Storyboard>
+        <!--переопределяем анимацию подсветки textBox при наведении-->
+        <Style x:Key="CustomFilledTextBox" BasedOn="{StaticResource MaterialDesignFilledTextBox}" TargetType="TextBox">
+            <Style.Triggers>
+                <Trigger Property="IsFocused" Value="True">
+                    <Trigger.EnterActions>
+                        <BeginStoryboard Storyboard="{StaticResource FocusAnimation}"/>
+                    </Trigger.EnterActions>
+                </Trigger>
+            </Style.Triggers>
+        </Style>
     </Page.Resources>
 
     <!--роль-->
-    <Grid Background="White" Margin="50,0,50,0" DataContext="{StaticResource ListCarBrandViewModel}">
+    <Grid Background="White" Margin="50,0,50,0" DataContext="{StaticResource ListAutopartViewModel}">
 
         <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
 
@@ -27,10 +44,12 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
         <!--название-->
-        <TextBlock Grid.Row="0" Grid.Column="0" Text="Деталь" FontSize="30" Foreground="Black" FontWeight="DemiBold" Margin="0,80,0,40" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+        <TextBlock Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Text="Деталь" FontSize="30" Foreground="Black" FontWeight="DemiBold" Margin="0,40,0,40" VerticalAlignment="Center" HorizontalAlignment="Center"/>
 
         <!--возврат на главную-->
         <Grid  Grid.Row="0" Grid.Column="0" Visibility="Visible" x:Name="closeFrame" Margin="0,0,0,40">
@@ -47,22 +66,69 @@
 
         </Grid>
 
-        <!--выбор агрегат-->
+        <!--выбор марки авто-->
         <ComboBox Grid.Column="0" Grid.Row="1"
+            Width="320" Margin="0,30,0,0" x:Name="CbCarBrand" DisplayMemberPath="CarBrandName"
+            SelectedItem="{Binding SelectedCarBrand, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+            materialDesign:HintAssist.Hint="Выберите марку автомобиля" IsEditable="True"
+            Style="{StaticResource MaterialDesignOutlinedComboBox}"/>
+
+        <!--выбор модели авто-->
+        <ComboBox Grid.Column="0" Grid.Row="2"
+            Width="320" Margin="0,30,0,0" x:Name="CbCarModel" DisplayMemberPath="NameCarModel"
+            SelectedItem="{Binding SelectedCarModel, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+            materialDesign:HintAssist.Hint="Выберите модель автомобиля" IsEditable="True"
+            Style="{StaticResource MaterialDesignOutlinedComboBox}"/>
+
+        <!--выбор агрегат-->
+        <ComboBox Grid.Column="0" Grid.Row="3"
+            Width="320" Margin="0,30,0,0" x:Name="CbUnit" DisplayMemberPath="NameUnit"
+            SelectedItem="{Binding SelectedUnit, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+            materialDesign:HintAssist.Hint="Выберите агрегат автомобиля" IsEditable="True"
+            Style="{StaticResource MaterialDesignOutlinedComboBox}"/>
+
+        <!--выбор узла-->
+        <ComboBox Grid.Column="0" Grid.Row="4"
+            Width="320" Margin="0,30,0,0" x:Name="CbKnot" DisplayMemberPath="NameKnot"
+            SelectedItem="{Binding SelectedKnot, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+            materialDesign:HintAssist.Hint="Выберите агрегат автомобиля" IsEditable="True"
+            Style="{StaticResource MaterialDesignOutlinedComboBox}"/>
+
+        <!--выберите страна-->
+        <ComboBox Grid.Column="0" Grid.Row="5" x:Name="CbCountry" DisplayMemberPath="NameCountry"
+            SelectedItem="{Binding SelectedCountry, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
             Width="320" Margin="0,30,0,0"
-            materialDesign:HintAssist.Hint="Выберите агрегат" IsEditable="True"
+            materialDesign:HintAssist.Hint="Выберите страну производства" IsEditable="True"
             Style="{StaticResource MaterialDesignOutlinedComboBox}"/>
 
         <!--выберите производителя-->
-        <ComboBox Grid.Column="0" Grid.Row="2"
+        <ComboBox Grid.Column="0" Grid.Row="6" x:Name="CbManufacture" DisplayMemberPath="NameManufacture"
+            SelectedItem="{Binding SelectedManufacture, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
             Width="320" Margin="0,30,0,0"
             materialDesign:HintAssist.Hint="Выберите производителя" IsEditable="True"
             Style="{StaticResource MaterialDesignOutlinedComboBox}"/>
 
-        <!--цена-->
-        <TextBox Grid.Row="3" Grid.Column="0" x:Name="price" Height="50" Margin="0,30,0,0"
+        <!--название детали-->
+        <TextBox Grid.Row="1" Grid.Column="1" x:Name="NameAutopart" Height="50" Margin="0,30,0,0"
              VerticalAlignment="Center" HorizontalAlignment="Center"
-             Text="{Binding InputLogin, UpdateSourceTrigger=PropertyChanged}"   
+             Text="{Binding OutAutopart, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"   
+             materialDesign:TextFieldAssist.HasClearButton="True"
+             Style="{StaticResource MaterialDesignOutlinedTextBox}" 
+             materialDesign:HintAssist.Hint="Введите название датели" 
+             materialDesign:TextFieldAssist.CharacterCounterVisibility="Hidden"
+             MaxLength="100" TextWrapping="Wrap" Width="320" />
+
+        <!--статус отображения-->
+        <ComboBox Grid.Column="1" Grid.Row="4" x:Name="CbModerationStatus" DisplayMemberPath="NameModerationStatus"
+            SelectedItem="{Binding SelectedModerationStatus, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+            Width="320" Margin="0,30,0,0"
+            materialDesign:HintAssist.Hint="Выберите статус отображения" IsEditable="True"
+            Style="{StaticResource MaterialDesignOutlinedComboBox}"/>
+
+        <!--цена-->
+        <TextBox Grid.Row="2" Grid.Column="1" x:Name="PriceSale" Height="50" Margin="0,30,0,0"
+             VerticalAlignment="Center" HorizontalAlignment="Center"
+             Text="{Binding OutPriceSale, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"   
              materialDesign:TextFieldAssist.HasClearButton="True"
              Style="{StaticResource MaterialDesignOutlinedTextBox}" 
              materialDesign:HintAssist.Hint="Введите цену" 
@@ -70,9 +136,9 @@
              MaxLength="100" TextWrapping="Wrap" Width="320" />
 
         <!--кол-во на складе-->
-        <TextBox Grid.Row="4" Grid.Column="0" x:Name="quantity" Height="50" Margin="0,30,0,0"
+        <TextBox Grid.Row="3" Grid.Column="1" x:Name="AvailableityStock" Height="50" Margin="0,30,0,0"
              VerticalAlignment="Center" HorizontalAlignment="Center"
-             Text="{Binding InputLogin, UpdateSourceTrigger=PropertyChanged}"   
+             Text="{Binding OutAvailableityStock, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"   
              materialDesign:TextFieldAssist.HasClearButton="True"
              Style="{StaticResource MaterialDesignOutlinedTextBox}" 
              materialDesign:HintAssist.Hint="Количество на складе" 
@@ -80,7 +146,7 @@
              MaxLength="100" TextWrapping="Wrap" Width="320" />
 
         <!--кнопки-->
-        <Grid Grid.Row="5" Margin="0,40,0,0" HorizontalAlignment="Center">
+        <Grid Grid.Row="7" Grid.ColumnSpan="2" Margin="0,40,0,0" HorizontalAlignment="Center">
 
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
