--- a/sparePartsStore/View/ViewAdministrator/ViewWorkingWithData/PageListAutoparts.xaml
+++ b/sparePartsStore/View/ViewAdministrator/ViewWorkingWithData/PageListAutoparts.xaml
@@ -5,11 +5,16 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:sparePartsStore.View.ViewAdministrator.ViewWorkingWithData"
       xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+      xmlns:ViewModel="clr-namespace:sparePartsStore.ViewModel"
       mc:Ignorable="d" 
       Title="" MinHeight="700" Height="Auto" MinWidth="1200" Width="Auto">
 
+    <Page.Resources>
+        <ViewModel:ListAutopartViewModel x:Key="ListAutopartViewModel"/>
+    </Page.Resources>
+
     <!--автозапчасти-->
-    <Grid Background="White" Margin="50,0,50,0">
+    <Grid Background="White" Margin="50,0,50,0" DataContext="{StaticResource ListAutopartViewModel}">
 
         <!--стили-->
         <Grid.Resources>
@@ -36,7 +41,8 @@
         <TextBlock Grid.Row="0" Grid.Column="0" Text="Список запчастей автомобиля" FontSize="30" Foreground="Black" FontWeight="DemiBold" HorizontalAlignment="Left" Margin="0,40,0,40" VerticalAlignment="Center"/>
 
         <!--кнопка аналогов-->
-        <Button Grid.Row="1" Grid.Column="0" Content="Подбор аналогов" MinWidth="330" Height="35" Background="Gray" BorderBrush="Black" HorizontalAlignment="Right"/>
+        <Button Grid.Row="1" Grid.Column="0" Content="Подбор аналогов" MinWidth="330" Height="35" 
+                Background="Gray" BorderBrush="Black" HorizontalAlignment="Right" Click="Btn_AnalogAutoParts"/>
 
         <!--основные кнопки-->
         <UniformGrid  Grid.Row="2" Margin="0,20,0,0">
@@ -52,13 +58,21 @@
                 </Grid.ColumnDefinitions>
                 
                 <!--все основные кнопки и поля-->
-                <Button Grid.Column="0" Content="Добавить" MinWidth="100" Height="35" Background="Gray" BorderBrush="Black"/>
-                <Button Grid.Column="1" Content="Редктировать" MinWidth="100" Height="35" Background="Gray" BorderBrush="Black" Margin="10,0,0,0"/>
-                <Button Grid.Column="2" Content="Удалить" MinWidth="100" Height="35" Background="Gray" BorderBrush="Black" Margin="10,0,0,0"/>
+                <Button Grid.Column="0" Content="Добавить" MinWidth="100" 
+                        Height="35" Background="Gray" BorderBrush="Black" Click="Btn_AddAutoParts"/>
+                
+                <Button Grid.Column="1" Content="Редктировать" MinWidth="100" 
+                        Height="35" Background="Gray" BorderBrush="Black" Margin="10,0,0,0" Command="{Binding AutoParts}"
+                        Click="Btn_EditAutoParts" IsEnabled="{Binding IsWorkButtonEnable}"/>
+                
+                <Button Grid.Column="2" Content="Удалить" MinWidth="100" 
+                        Height="35" Background="Gray" BorderBrush="Black" Margin="10,0,0,0" 
+                        Command="{Binding DeleteAutoParts}" IsEnabled="{Binding IsWorkButtonEnable}"/>
 
                 <TextBox Grid.Column="3" x:Name="SearchParts" Height="50" Margin="10,0,0,0"
                     VerticalAlignment="Center"  HorizontalAlignment="Center"
-                    Text="{Binding InputLogin, UpdateSourceTrigger=PropertyChanged}"   
+                    Text="{Binding NameAutoParts, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                    TextChanged="TextBoxNameAutoParts"    
                     materialDesign:TextFieldAssist.HasClearButton="True"
                     Style="{StaticResource MaterialDesignOutlinedTextBox}" 
                     materialDesign:HintAssist.Hint="Поиск запчасти" 
@@ -66,45 +80,49 @@
                     MaxLength="100" MinWidth="408"/>
 
                 <!--кнопка запчасти ожидающие подтверждения-->
-                <Button Grid.Column="4" Content="Запчасти ожидающие подтверждения" MinWidth="330" Height="35" Background="Gray" BorderBrush="Black" HorizontalAlignment="Right"  Margin="10,0,0,0"/>
+                <Button Grid.Column="4" Content="Запчасти ожидающие подтверждения" MinWidth="330" 
+                        Height="35" Background="Gray" BorderBrush="Black" Command="{Binding AwaitingConfirmation}" 
+                        HorizontalAlignment="Right"  Margin="10,0,0,0"/>
             </Grid>
             
         </UniformGrid>
 
             <!--кнопка таблицы-->
         <Grid Grid.Row="3" Margin="0,40,0,0">
-
-            <DataGrid
-                    Style="{StaticResource MaterialDesignDataGrid}"
-                    ColumnHeaderStyle="{StaticResource columnTable}"
+            <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Disabled">
+                <DataGrid IsReadOnly="True"
+                    HorizontalAlignment="Center" RowHeight="50" FontSize="18"
                     AutoGenerateColumns="False"
-                    ItemsSource="{Binding}" 
-                    SelectedValuePath="{Binding}">
+                    CellStyle="{StaticResource DataGridCellStyle}"
+                    ItemsSource="{Binding ListAutoPartsDPO}"
+                    SelectedItem="{Binding SelectedAutoParts}"
+                    Style="{StaticResource MaterialDesignDataGrid}"
+                    ColumnHeaderStyle="{StaticResource columnTableHeader}">
 
-                <DataGrid.Columns>
-                    <DataGridTextColumn Header="Номер" Binding="{Binding numberParts}" Width="80"/>
+                    <DataGrid.Columns>
+                        <DataGridTextColumn Header="Номер" Binding="{Binding NumberAutopart}" Width="80" IsReadOnly="True"/>
 
-                    <DataGridTextColumn Header="Название" Binding="{Binding nameParts}" MinWidth="200"/>
+                        <DataGridTextColumn Header="Название" Binding="{Binding NameAutopart}" MinWidth="200" IsReadOnly="True"/>
 
-                    <DataGridTextColumn Header="Агрегат" Binding="{Binding nameParts}" MinWidth="100"/>
+                        <DataGridTextColumn Header="Агрегат" Binding="{Binding NameUnit}" MinWidth="100" IsReadOnly="True"/>
 
-                    <DataGridTextColumn Header="Узел" Binding="{Binding nameParts}"  MinWidth="100"/>
+                        <DataGridTextColumn Header="Узел" Binding="{Binding NameKnot}"  MinWidth="100" IsReadOnly="True"/>
 
-                    <DataGridTextColumn Header="Марка" Binding="{Binding nameParts}"  MinWidth="100"/>
+                        <DataGridTextColumn Header="Марка" Binding="{Binding CarBrandName}"  MinWidth="100" IsReadOnly="True"/>
 
-                    <DataGridTextColumn Header="Модель" Binding="{Binding nameParts}" MinWidth="100"/>
+                        <DataGridTextColumn Header="Модель" Binding="{Binding NameCarModel}" MinWidth="100" IsReadOnly="True"/>
 
-                    <DataGridTextColumn Header="Цена" Binding="{Binding nameParts}"  MinWidth="80"/>
+                        <DataGridTextColumn Header="Цена" Binding="{Binding PriceSale}"  MinWidth="80" IsReadOnly="True"/>
 
-                    <DataGridTextColumn Header="Доступно         на складе" Binding="{Binding nameParts}"  Width="70"/>
+                        <DataGridTextColumn Header="Доступно         на складе" Binding="{Binding AvailableityStock}"  Width="70" IsReadOnly="True"/>
 
-                    <DataGridTextColumn Header="Статус" Binding="{Binding nameParts}" MinWidth="100"/>
+                        <DataGridTextColumn Header="Статус" Binding="{Binding ModerationStatus}" MinWidth="100" IsReadOnly="True"/>
 
-                    <DataGridTextColumn Header="Поставщик" Binding="{Binding nameParts}" MinWidth="100"/>
+                        <DataGridTextColumn Header="Производитель" Binding="{Binding NameManufacture}" MinWidth="100" IsReadOnly="True"/>
                 </DataGrid.Columns>
 
-            </DataGrid>
-
+                </DataGrid>
+            </ScrollViewer>
         </Grid>
         
     </Grid>
