--- a/sparePartsStore/View/ViewAdministrator/ViewWorking/PageWorkDetail.xaml
+++ b/sparePartsStore/View/ViewAdministrator/ViewWorking/PageWorkDetail.xaml
@@ -122,7 +122,7 @@
              MaxLength="100" TextWrapping="Wrap" Width="320" />
 
         <!--статус отображения-->
-        <ComboBox Grid.Column="1" Grid.Row="4" x:Name="CbModerationStatus" DisplayMemberPath="string"
+        <ComboBox Grid.Column="1" Grid.Row="4" x:Name="CbModerationStatus" ItemsSource="{Binding ModerationStatusComboBoxItems, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
             SelectedItem="{Binding SelectedModerationStatus, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
             Width="320" Margin="0,30,0,0"
             materialDesign:HintAssist.Hint="Выберите статус отображения" IsEditable="True"
